syntax = "proto3";
package team;

message Team {
  uint64 id = 1;
  int64  created_at = 2;
  uint64  created_by = 3;
  optional int64  updated_at = 4;
  optional uint64 updated_by = 5;
  uint64 organization_id = 6;
  string name = 7;
}